[build-system]
requires = ["setuptools>=61", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LabxPipe"
authors = [{name = "Charles E. Vejnar"}]
description = "LabxPipe"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Mozilla Public License 2.0 (MPL 2.0)"}
dependencies = [
    "labxdb",
    "pyfnutils",
    "xlsxwriter",
]
dynamic = ["version"]

[project.urls]
homepage = "https://git.sr.ht/~vejnar/LabxPipe"

[project.scripts]
lxpipe = "labxpipe_scripts.lxpipe:main"

[tool.setuptools_scm]
